adding some rules in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,9 @@ coverage
 ############################
 
 .env
-.env.production
+.env/production
+.env.example
+.envproduction
 license.txt
 exports
 .strapi
