--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "production": "npm run build --dotenv .env.production"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.17.0",
